--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 blinker==1.8.2
 # cliapp==1.20180812.1
 click==8.1.7
-cmdtest==0.32+git
+# cmdtest==0.32+git
 command-not-found==0.3
 cryptography==3.4.8
 dbus-python==1.2.18
