--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ blinker==1.8.2
 # cliapp==1.20180812.1
 click==8.1.7
 # cmdtest==0.32+git
-command-not-found==0.3
+# command-not-found==0.3
 cryptography==3.4.8
 dbus-python==1.2.18
 distro==1.7.0
