--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ PyGObject==3.42.1
 PyJWT==2.3.0
 pyparsing==2.4.7
 pytest==8.3.2
-python-apt==2.4.0+ubuntu3
+# python-apt==2.4.0+ubuntu3
 PyYAML==5.4.1
 SecretStorage==3.3.1
 setuptools==72.1.0
